--- a/LostAndFoundPHP/assets/css/style.css
+++ b/LostAndFoundPHP/assets/css/style.css
@@ -108,3 +108,27 @@ textarea{
 .activeClass:focus{
   background-color: #b0c4de;
 }
+
+
+.imgcont{
+  background-color: #f2f2f2;
+  overflow: scroll;
+  padding:5px 0px;
+}
+td.desc{
+  max-width: 350px;
+  word-wrap: break-word;
+} 
+.desc > div{
+
+  max-width: 350px;
+  overflow-x: scroll;
+  word-wrap: break-word;
+}
+.imgcont::-webkit-scrollbar{
+  display: none;
+
+}
+input[type="file"]:invalid{
+  outline: 2px red;
+}
