Add parang facebook na card
ginawa ko naman lahat , dko lang talaga kaya

--- a/Front end/assets/css/style.css
+++ b/Front end/assets/css/style.css
@@ -168,3 +168,8 @@ input[type="file"]:invalid{
 .descCont{
   width: 100%;
 }
+@media screen and (max-width: 320px) {
+  .container {
+    max-width: 100%;
+   }
+ }
