--- a/LostAndFoundPHP/assets/css/style.css
+++ b/LostAndFoundPHP/assets/css/style.css
@@ -53,10 +53,14 @@ body {
   text-align: center;
 }
 .success {
+  width: 92%;
+  margin: 0px auto;
+  padding: 10px;
+  border: 1px solid #3c763d;
   color: #3c763d;
   background: #dff0d8;
-  border: 1px solid #3c763d;
-  margin-bottom: 20px;
+  border-radius: 5px;
+  text-align: center;
 }
 .content {
   width: 30%;
